# mdfh-distrib

./: .gitignore  BENCHMARKING_GUIDE.md  BUILD_INSTRUCTIONS.md  CMakeLists.txt  KERNEL_BYPASS_VALIDATION.md  PRODUCTION_READY_SUMMARY.md  README.md  build.sh  conanfile.txt  parser.cpp  quick_test.sh  requirements.text  ring_buffer.cpp  run_tests.sh  test_client.py
apps/: bypass_ingestion_benchmark.cpp  kernel_bypass_simulation_test.cpp  market_data_server.cpp  multi_feed_benchmark.cpp  simple_bypass_test.cpp
apps/bench_ingest/: CMakeLists.txt  README.md  bench_ingest.cpp  bench_ingest.hpp
apps/feed_sim/: CMakeLists.txt  sim.cpp  sim.hpp
config/: multi_feed_example.yaml
docs/: kernel_bypass_networking.md  multi_feed_ingestion.md
include/mdfh/: core.hpp  encoding.hpp  ingestion.hpp  kernel_bypass.hpp  multi_feed_ingestion.hpp  performance_tracker.hpp  ring_buffer.hpp  simulator.hpp  timing.hpp
scripts/: README.md  build.sh  run_benchmarks.sh  run_tests.sh  setup.sh
src/: CMakeLists.txt  encoding.cpp  ingestion.cpp  kernel_bypass.cpp  multi_feed_ingestion.cpp  performance_tracker.cpp  ring_buffer.cpp  simulator.cpp
tests/: CMakeLists.txt  README.md
